--- a/.github/workflows/main_telacad.yml
+++ b/.github/workflows/main_telacad.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -59,4 +58,4 @@ jobs:
           app-name: 'telacad'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1699F102495E49E1A30007634C6241E9 }}
-          package: .
+          package: build
